--- a/about.html
+++ b/about.html
@@ -45,9 +45,11 @@
           <a class="navbar-brand" href="index.html">
             <span>
               <!--here is ther logo-->
-              Toz <span class="logo-extention">kitchen </span>
+              <!-- Toz <span class="logo-extention">kitchen </span> -->
+               <img src="images/toz kitche logo.jpg" alt="" class="logo">
             </span>
           </a>
+
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class=""> </span>
@@ -213,6 +215,7 @@
               <a href="">
                 <ion-icon name="mail-outline"></ion-icon>
                 <span>
+
                   <a href="mailto:aiphiesfood@gmail.com">aiphiesfood@gmail.com</a>
                 </span>
               </a>
@@ -225,7 +228,7 @@
               Toz kitchen
             </a>
             <p>
-              Toz Kitchen is your go-to destination for authentic Nigerian cuisine, offering a diverse menu that caters to all tastes and preferences.
+              Toz Kitchen and catering service is your go-to destination for authentic Nigerian cuisine, offering a diverse menu that caters to all tastes and preferences.
             </p>
             <div class="footer_social">
               <a href="">
@@ -249,11 +252,17 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> designed By 
-          <a href="https://james-daniel-portfolio.netlify.app/" style="color: purple; font-size: large; text-decoration: underline;"> James [Your daily tech partner]</a><br> <br>
+          <a href="https://james-daniel-portfolio.netlify.app/" style=" text-decoration: underline;"> James Your daily tech partner</a><br> <br>
         </p>
       </div>
     </div> 
   </footer>
+
+  <div class="floting-button-container">
+                <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+  </div>
   <!-- footer section -->
 
 
