--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="Culinary, Catering, Training, Online Food Delivery, Nigerian Cuisine" />
+  <meta name="description" content="Toz Kitchen offers exquisite catering for events in Aba & PH, certified culinary training, and online delivery of Nigerian soups, stews, and international dishes. Taste excellence!" />
+  <meta name="author" content="Toz kitchen and culinary services" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title>toz kitchen </title>
+  <title> Toz Kitchen: Culinary service, Training & Online Food in Aba, Nigeria </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -46,7 +46,8 @@
           <a class="navbar-brand" href="index.html">
             <span>
               <!--here is ther logo-->
-              Toz <span class="logo-extention">kitchen </span>
+              <!-- Toz <span class="logo-extention">kitchen </span> -->
+               <img src="images/toz kitche logo.jpg" alt="" class="logo">
             </span>
           </a>
 
@@ -77,8 +78,8 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
-              <a href="" class="order_online">
-                Order Online
+              <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="order_online" target="_blank" rel="noopener noreferrer">
+                   Order Online
               </a>
             </div>
             
@@ -125,7 +126,7 @@
                        Experience the convenience of Toz Kitchen's online store. Choose from our delicious litre bowls of traditional Nigerian soups like Egusi and Ofe Achara, comforting Jollof rice, or international favorites like English breakfast and Chicken Quesadillas.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="btn1" target="_blank" rel="noopener noreferrer">
                         Order Now
                       </a>
                     </div>
@@ -146,7 +147,7 @@
                       Unlock your potential with Toz Kitchen's intensive one-month certified chef course. Get hands-on training in diverse cuisines and gain essential business skills to thrive in the vibrant world of catering.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="btn1" target="_blank" rel="noopener noreferrer">
                         Start Now
                       </a>
                     </div>
@@ -188,11 +189,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-               About Toz Kitchen
+               About Toz Kitchen and catering services
               </h2>
             </div>
             <p>
-              At Toz Kitchen, we believe in the power of food to bring people together, inspire creativity, and create unforgettable experiences. Located in the heart of Aba, Abia State, Nigeria, we are more than just a culinary business – we are a hub of gastronomic excellence driven by passion and a commitment to quality.
+              At Toz Kitchen and catering services, we believe in the power of food to bring people together, inspire creativity, and create unforgettable experiences. Located in the heart of Aba, Abia State, Nigeria, we are more than just a culinary business – we are a hub of gastronomic excellence driven by passion and a commitment to quality.
               Toz Kitchen seamlessly blends the rich heritage of traditional Nigerian dishes with the exciting diversity of international cuisine. Whether you're planning a special event, looking to hone your cooking skills, or simply craving a delicious, home-cooked meal delivered to your doorstep, we are dedicated to exceeding your expectations. Our focus on fresh ingredients, meticulous preparation, and genuine customer satisfaction sets us apart.
             </p>
             <a href="about.html">
@@ -215,7 +216,7 @@
       <div class="col-md-6">
         <div class="service_box">
           <h2>Our Services</h2>
-          <p>At Toz Kitchen, we offer a wide range of culinary services to meet your needs:</p>
+          <p>At Toz Kitchen and catering services, we offer a wide range of culinary services to meet your needs:</p>
 
           <details class="service_detail_item">
             <summary><strong>Event Catering Services</strong></summary>
@@ -268,62 +269,6 @@
                   Tasty Thursdays
                 </h5>
                 <h6>
-                  <span>20%</span> Off
-                </h6>
-                <a href="">
-                  Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                    <g>
-                      <g>
-                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                     C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                      </g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                  </svg>
-                </a>
               </div>
             </div>
           </div>
@@ -337,63 +282,6 @@
                 <h5>
                   Jollof at its best
                 </h5>
-                <h6>
-                  <span>15%</span> Off
-                </h6>
-                <a href="">
-                  Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
-                    <g>
-                      <g>
-                        <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
-                     c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                     C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
-                     c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
-                     C457.728,97.71,450.56,86.958,439.296,84.91z" />
-                      </g>
-                    </g>
-                    <g>
-                      <g>
-                        <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
-                     c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
-                      </g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                  </svg>
-                </a>
               </div>
             </div>
           </div>
@@ -429,7 +317,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/jolof rice and chiken.webp" alt="">
+                  <img src="images/toz kitche fried rice.jpg" alt="" style="width: 100%; height: 100%;">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -446,7 +334,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/poundo-and-egusi-soup-removebg-preview.png" alt="">
+                  <img src="images/poundo-and-egusi-soup-removebg-preview.png" alt="" style="width: 100%;">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -565,12 +453,13 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAasXNLWNvuRioSLcr7-NQtkzK5kt1IW4nJw&s" alt="">
+                  <img src="images/toz kitchen fried pasta.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
                     Delicious Pasta
                   </h5>
+
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
@@ -585,7 +474,50 @@
 
   <!-- end food section -->
 
+<!--photo gallery-->
 
+<section class="photo_gallery_section layout_padding">
+    <div class="container">
+      <div class="heading_container heading_center">
+        <h2>
+          Our Recent Delicacies
+        </h2>
+      </div>
+      <div class="image-wrapper">
+        <div class="img-container">
+          <img src="images/toz kitchen chiken and moimoi.jpg" alt="">
+        </div>
+        <div class="img-container">
+          <img src="images/toz kitchen perpper soup.jpg" alt="">
+        </div>
+        <div class="img-container">
+          <img src="images/toz kitchen rice in a plater.jpg" alt="">
+        </div>
+        <div class="img-container">
+          <img src="images/toz-kitchen table with swallow and rice.jpg" alt="">
+        </div>
+        <div class="img-container">
+          <img src="images/toz kitchen snail and vegitable soup.jpg" alt="">
+        </div>
+        <div class="img-container">
+          <img src="images/toz-kitchen break fast.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+<!--photo gallery ends here-->
+          <div class="img-box">
+            <img src="images/gallery-img3.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+<!--photo gallery ends here-->
 
   <!-- book section -->
   <section class="book_section layout_padding">
@@ -631,9 +563,9 @@
                 <input type="date" class="form-control">
               </div>
               <div class="btn_box">
-                <button>
+                <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="order_online" target="_blank" rel="noopener noreferrer">
                   Book Now
-                </button>
+                </a>
               </div>
             </form>
           </div>
@@ -730,6 +662,7 @@
               <a href="">
                 <ion-icon name="mail-outline"></ion-icon>
                 <span>
+
                   <a href="mailto:aiphiesfood@gmail.com">aiphiesfood@gmail.com</a>
                 </span>
               </a>
@@ -742,7 +675,7 @@
               Toz kitchen
             </a>
             <p>
-              Toz Kitchen is your go-to destination for authentic Nigerian cuisine, offering a diverse menu that caters to all tastes and preferences.
+              Toz Kitchen and catering service is your go-to destination for authentic Nigerian cuisine, offering a diverse menu that caters to all tastes and preferences.
             </p>
             <div class="footer_social">
               <a href="">
@@ -766,11 +699,17 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> designed By 
-          <a href="https://james-daniel-portfolio.netlify.app/" style="color: purple; font-size: large; text-decoration: underline;"> James [Your daily tech partner]</a><br> <br>
+          <a href="https://james-daniel-portfolio.netlify.app/" style=" text-decoration: underline;"> James Your daily tech partner</a><br> <br>
         </p>
       </div>
     </div> 
   </footer>
+
+  <div class="floting-button-container">
+                <a href="https://wa.me/+2349039159676?text=Hello%20Toz%20Kitchen%2C%20I%27m%20interested%20in%20your%20catering%20services." class="whatsapp-button" target="_blank" rel="noopener noreferrer">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
+  </div>
   <!-- footer section -->
 
   <!-- jQery -->
