--- a/book.html
+++ b/book.html
@@ -67,7 +67,7 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="book.html">Book Table <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="book.html">Book Service <span class="sr-only">(current)</span> </a>
               </li>
             </ul>
             <div class="user_option">
@@ -196,8 +196,8 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="map_container ">
-            <div id="googleMap"></div>
+          <div class="img-box">
+            <img src="images/toz banner.jpg" alt="" style="width: 100%; height: 100%;">
           </div>
         </div>
       </div>
