--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/toz kitchen rice in a plater.jpg" alt="" style="width: 100%; border-radius: 10px;">
           </div>
         </div>
         <div class="col-md-6">
@@ -317,11 +317,11 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/toz kitche fried rice.jpg" alt="" style="width: 100%; height: 100%;">
+                  <img src="images/toz kitche fried rice.jpg" alt="" style="width: 100%; height: 200px;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Jollof Rice (with Grilled Chicken)
+                    fried rice and chicken
                   </h5>
                   <p>
                     Our signature take on West Africa's beloved rice dish, slow-cooked in a rich tomato and pepper base, perfectly paired with succulent, grilled chicken. A true crowd-pleaser for any occasion.
@@ -334,14 +334,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/poundo-and-egusi-soup-removebg-preview.png" alt="" style="width: 100%;">
+                  <img src="images/toz-kitchen table with swallow and rice.jpg" alt="" style="width: 100%;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Egusi Soup (with Pounded Yam)
+                    amala ewedu and gbegiri
                   </h5>
                   <p>
-                    A deeply satisfying and nutritious soup made from ground melon seeds, spinach, and a medley of premium meats, served traditionally with smooth, warm pounded yam. A taste of authentic Nigerian comfort.
+                    A traditional Nigerian dish featuring smooth, stretchy amala served with a rich, flavorful ewedu soup and a hearty gbegiri (bean soup). This comforting meal is a staple in many Nigerian households.
                   </p>
                 </div>
               </div>
@@ -351,14 +351,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f3.png" alt="">
+                  <img src="images/toz-kitchen break fast.jpg" alt="" style="width: 100%; height: 200px;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Chicken Quesadilla (Mexican-Inspired)
+                    Breakfast Platter
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quaWarm, toasted tortillas generously filled with tender, seasoned chicken, melted cheese, and a hint of fresh vegetables. Served with a side of zesty salsa and sour cream for a delightful bite.si cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    A delightful morning spread featuring fluffy scrambled eggs, crispy bacon, grilled sausages, baked beans, and toasted bread. Perfect for starting your day with a hearty and satisfying meal.
                   </p>
                 </div>
               </div>
@@ -368,14 +368,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/ofe-achara.webp" alt="">
+                  <img src="images/toz kitchen perpper soup.jpg" alt="" style="width: 100%; height: 200px;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Ofe Achara (Aba Style)
+                    pepper soup
                   </h5>
                   <p>
-                    A unique and aromatic soup originating from Abia State, prepared with tender achara shoots, fresh seafood, and traditional spices. A true delicacy showcasing regional flavors.
+                    A spicy and aromatic soup made with a blend of traditional spices, tender meat, and fresh herbs. This comforting dish is perfect for warming up on a chilly day or as a flavorful starter to any meal.
                   </p>
                 </div>
               </div>
@@ -385,14 +385,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7BRRWyWmUAsXS-8-vzb5FMcNHDt3KOH8wIQ&s" alt="">
+                  <img src="images/toz sea food.jpg" alt="" style="width: 100%; height: 200px;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Suya Skewers (Beef/Chicken)
+                    Tasty Superpack Soup
                   </h5>
                   <p>
-                    Perfectly grilled, thinly sliced beef or chicken marinated in a vibrant, nutty spice blend. These smoky, tender skewers are an irresistible street-food favorite, elevated for your enjoyment.
+                    A rich and flavorful soup made with fresh seafood, and a blend of spices. This dish is a delightful combination of textures and tastes, perfect for seafood lovers looking for something unique.
                   </p>
                 </div>
               </div>
@@ -402,14 +402,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="https://img.hellofresh.com/f_auto,fl_lossy,h_640,q_auto,w_1200/hellofresh_s3/image/full-english-breakfast-with-pork-sausage-3b79d448.jpg" alt="">
+                  <img src="images/toz breakfast.jpg" alt="" style="width: 100%; height: 200px;">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Classic English Breakfast
+                    Classic Breakfast
                   </h5>
                   <p>
-                      Start your day the hearty way with our authentic English Breakfast: perfectly fried eggs, crispy bacon, savory sausages, grilled tomatoes, baked beans, and buttered toast. A complete and comforting morning feast.
+                      Start your day the hearty way with our authentic Breakfast: perfectly fried eggs, crispy bacon, savory sausages, grilled tomatoes, baked beans, and buttered toast. A complete and comforting morning feast.
                   </p>
                 </div>
               </div>
@@ -419,14 +419,13 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="https://i.ytimg.com/vi/Nk0_y236Yj4/maxresdefault.jpg" alt="">
+                  <img src="images/toz kitchen chiken and moimoi.jpg" alt="" style="width: 100%; height: 200px;" >
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Creamy Tuscan Salmon
                   </h5>
                   <p>
-                    Pan-seared salmon fillets bathed in a rich, sun-dried tomato and spinach cream sauce. This elegant dish offers a harmonious blend of flavors, perfect for a sophisticated palate.
+                    A delicious combination of steamed bean pudding (moi moi) and tender chicken, served with a flavorful sauce. This dish is a true representation of Nigerian comfort food, perfect for any occasion.
                   </p>
                 </div>
               </div>
@@ -436,14 +435,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTF7pJYvYZP5hKLYyDoJn1PXwSrQej-baoiMw&s" alt="">
+                  <img src="images/toz kitchen snail and vegitable soup.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Vegetable Pad Thai
+                    Vegetable Snail Soup
                   </h5>
                   <p>
-                    A vibrant and flavorful Thai stir-fried noodle dish, tossed with crisp, fresh vegetables, fragrant herbs, and a perfectly balanced sweet, sour, and savory sauce. A healthy and delicious international classic.
+                    A vibrant and flavorful soup made with fresh vegetables and tender snails, seasoned with a blend of spices. This dish is a unique and delicious representation of Nigerian cuisine, perfect for those looking to try something new.
                   </p>
                 </div>
               </div>
