--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="book.html">Book Table</a>
+                <a class="nav-link" href="book.html">Book Service</a>
               </li>
             </ul>
             <div class="user_option">
@@ -112,14 +112,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f1.png" alt="">
+                  <img src="images/toz pan cake and souce.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Traditional Nigerian Delicacies
+                    pancake and sauce
                   </h5>
                   <p>
-                    Dive into the rich and diverse culinary landscape of Nigeria with our authentic offerings. From aromatic rice dishes to hearty, flavorful soups and stews, we bring you the true taste of home. We craft our Nigerian delicacies using age-old recipes and fresh, local ingredients, ensuring every bite is a celebration of our heritage. Experience the warmth and comfort of truly traditional cooking.
+                    pancake and sauce is a delightful breakfast option that combines fluffy pancakes with a rich, savory sauce. The pancakes are light and airy, while the sauce adds a burst of flavor, making it a perfect start to your day or a comforting treat at any time.
                   </p>
                 </div>
               </div>
@@ -171,159 +171,33 @@
       </ul>
 
       <div class="filters-content">
-        <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all Nigerian">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f1.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Jollof Rice (with Grilled Chicken)
-                  </h5>
-                  <p>
-                    Our signature take on West Africa's beloved rice dish, slow-cooked in a rich tomato and pepper base, perfectly paired with succulent, grilled chicken. A true crowd-pleaser for any occasion.
-                  </p>
-                </div>
-              </div>
-            </div>
+        <div class="image-container">
+          <div class="image">
+            <img src="images/toz breakfast.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all Nigerian">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f2.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Egusi Soup (with Pounded Yam)
-                  </h5>
-                  <p>
-                    A deeply satisfying and nutritious soup made from ground melon seeds, spinach, and a medley of premium meats, served traditionally with smooth, warm pounded yam. A taste of authentic Nigerian comfort.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz fried rce.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all International">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f3.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Chicken Quesadilla (Mexican-Inspired)
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quaWarm, toasted tortillas generously filled with tender, seasoned chicken, melted cheese, and a hint of fresh vegetables. Served with a side of zesty salsa and sour cream for a delightful bite.si cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz fruit salad.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all Nigerian">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f4.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Ofe Achara (Aba Style)
-                  </h5>
-                  <p>
-                    A unique and aromatic soup originating from Abia State, prepared with tender achara shoots, fresh seafood, and traditional spices. A true delicacy showcasing regional flavors.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitche fried rice.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all Nigerian">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f5.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Suya Skewers (Beef/Chicken)
-                  </h5>
-                  <p>
-                    Perfectly grilled, thinly sliced beef or chicken marinated in a vibrant, nutty spice blend. These smoky, tender skewers are an irresistible street-food favorite, elevated for your enjoyment.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitchen chiken and moimoi.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all international">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f6.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Classic English Breakfast
-                  </h5>
-                  <p>
-                      Start your day the hearty way with our authentic English Breakfast: perfectly fried eggs, crispy bacon, savory sausages, grilled tomatoes, baked beans, and buttered toast. A complete and comforting morning feast.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitchen fried pasta.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all international">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f7.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Creamy Tuscan Salmon
-                  </h5>
-                  <p>
-                    Pan-seared salmon fillets bathed in a rich, sun-dried tomato and spinach cream sauce. This elegant dish offers a harmonious blend of flavors, perfect for a sophisticated palate.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitchen fruite salad.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all international">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f8.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Vegetable Pad Thai
-                  </h5>
-                  <p>
-                    A vibrant and flavorful Thai stir-fried noodle dish, tossed with crisp, fresh vegetables, fragrant herbs, and a perfectly balanced sweet, sour, and savory sauce. A healthy and delicious international classic.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitchen perpper soup.jpg" alt="">
           </div>
-          <div class="col-sm-6 col-lg-4 all pasta">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img src="images/f9.png" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Delicious Pasta
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="image">
+            <img src="images/toz kitchen snail and vegitable soup.jpg" alt="">
           </div>
         </div>
       </div>
