--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+      <!-- <img src="images/hero-bg.jpg" alt=""> -->
+       <img src="images/toz.jpg" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
@@ -101,7 +102,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/f7.png" alt="">
+            <img src="images/toz fried rce.jpg" alt="">
           </div>
         </div>
         <!--========================-->
@@ -134,7 +135,7 @@
         <!--======================-->
                 <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/f7.png" alt="">
+            <img src="images/toz.jpg" alt="">
           </div>
         </div>
         <!--========================-->
@@ -153,7 +154,7 @@
         <!--======================-->
                 <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/f7.png" alt="">
+            <img src="images/toz1.jpg" alt="">
           </div>
         </div>
         <!--========================-->
