--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,8 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+      <!-- <img src="images/hero-bg.jpg" alt=""> -->
+       <img src="images/toz kitchen fried pasta.jpg" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
